--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "vincent",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
