--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "MERN-PROJECT backend",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Vysint/mern-project-backend.git"
+  },
   "author": "vincent",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Vysint/mern-project-backend/issues"
+  },
+  "homepage": "https://github.com/Vysint/mern-project-backend#readme",
   "dependencies": {
     "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "mongoose": "^6.8.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
