--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "mongoose": "^6.8.1",
+    "mongoose-unique-validator": "^3.1.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
