--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.14.2",
     "mongoose": "^6.8.1",
     "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
