--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.8.1",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
