--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Vysint/mern-project-backend#readme",
   "dependencies": {
     "axios": "^1.2.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
